[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-provider"
version = "0.1.0"
description = "Thin LLM wrapper with disk caching, async batching, and per-provider SDK routing"
requires-python = ">=3.10"
dependencies = [
    "litellm>=1.80.9,<1.82",
    "diskcache>=5.6.3",
    "httpx[http2]",
    "openai>=2.21",
    "google-genai>=1.63",
    "nest-asyncio",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff"]
